[gd_scene load_steps=5 format=3 uid="uid://bcm8prjq2wqvj"]

[ext_resource type="Script" path="res://scripts/Login.gd" id="1_rhy6u"]
[ext_resource type="Script" path="res://scripts/FindMatch.gd" id="2_vs2jd"]
[ext_resource type="Script" path="res://scripts/ReadyScreen.gd" id="3_y08xg"]
[ext_resource type="PackedScene" uid="uid://bavsqpddm2i4j" path="res://scenes/user_ready.tscn" id="4_uwqss"]

[node name="Node2D" type="Node2D"]
metadata/_edit_vertical_guides_ = []

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 375.0
offset_top = 203.0
offset_right = 785.0
offset_bottom = 460.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhy6u")

[node name="Label" type="Label" parent="Control/Login"]
layout_mode = 0
offset_left = 30.0
offset_top = 32.0
offset_right = 123.0
offset_bottom = 79.0
text = "Username"

[node name="Label2" type="Label" parent="Control/Login"]
layout_mode = 0
offset_left = 31.0
offset_top = 80.0
offset_right = 123.0
offset_bottom = 127.0
text = "Email"

[node name="Label3" type="Label" parent="Control/Login"]
layout_mode = 0
offset_left = 30.0
offset_top = 125.0
offset_right = 134.0
offset_bottom = 172.0
text = "Password"

[node name="UsernameEdit" type="LineEdit" parent="Control/Login"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 0
offset_left = 138.0
offset_top = 33.0
offset_right = 375.0
offset_bottom = 64.0

[node name="EmailEdit" type="LineEdit" parent="Control/Login"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 0
offset_left = 137.0
offset_top = 82.0
offset_right = 374.0
offset_bottom = 113.0

[node name="PasswordEdit" type="LineEdit" parent="Control/Login"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 0
offset_left = 137.0
offset_top = 127.0
offset_right = 374.0
offset_bottom = 158.0

[node name="LoginButton" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 70.0
offset_top = 180.0
offset_right = 187.0
offset_bottom = 220.0
text = "Login"

[node name="RegisterButton" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 220.0
offset_top = 179.0
offset_right = 337.0
offset_bottom = 219.0
text = "Register"

[node name="ErrorLabel" type="Label" parent="Control/Login"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="FindMatch" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vs2jd")

[node name="FindMatchLabel" type="Label" parent="Control/FindMatch"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Finding Match..."

[node name="FindMatchButton" type="Button" parent="Control/FindMatch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -29.5
offset_right = 83.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
text = "Find Match"

[node name="ReadyScreen" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_y08xg")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ReadyScreen"]
layout_mode = 0
offset_left = 26.0
offset_top = 20.0
offset_right = 397.0
offset_bottom = 191.0

[node name="UserReady" parent="Control/ReadyScreen/VBoxContainer" instance=ExtResource("4_uwqss")]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="Control/ReadyScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -73.0
offset_right = 102.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "Ready"

[connection signal="button_down" from="Control/Login/LoginButton" to="Control/Login" method="_on_login_button_down"]
[connection signal="button_down" from="Control/Login/RegisterButton" to="Control/Login" method="_on_register_button_down"]
[connection signal="button_down" from="Control/FindMatch/FindMatchButton" to="Control/FindMatch" method="_on_find_match_button_down"]
[connection signal="button_down" from="Control/ReadyScreen/ReadyButton" to="Control/ReadyScreen" method="_on_ready_button_down"]
